# GIF_DAQ

./: CMakeLists.txt  README  README.md  config.h.in  daqgifpp.ini  daqgifpp.ini~  makefile  makefile.old
datarun/HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV/: RESULT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_4900V_run20150311210948.csv  RESULT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5100V_run20150311213425.csv  RESULT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5200V_run20150311221045.csv  RESULT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5300V_run20150311223557.csv  RESULT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5400V_run20150311230025.csv  RESULT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5500V_run20150311233554.csv  RESULT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5600V_run20150312001403.csv  RESULT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5800V_run20150312004207.csv  ROOT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_0V_run20150311203934.root  ROOT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_4900V_run20150311210948.root  ROOT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5100V_run20150311213425.root  ROOT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5200V_run20150311221045.root  ROOT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5300V_run20150311223557.root  ROOT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5400V_run20150311230025.root  ROOT_HVEffTest_Ghent-gRPC_Cosmics_CMS-FEB_215mV_5500V_run20150311233554.root  (+2 more)
include/: CAENVMEtypes.h  DataReader.h  IniFile.h  MsgSvc.h  utils.h  v1190a.h  v1190aDecoder.h.old  v1718.h  vmemodule.h
src/: DataReader.cxx  IniFile.cxx  MsgSvc.cxx  daq.cxx  utils.cxx  v1190a.cxx  v1190a.cxx.old  v1190aDecoder.cxx.old  v1718.cxx
